# grapheneos-ai

./: .gitignore  README.md
app/src/main/cpp/llama/: CMakeLists.txt  llama_jni.cpp  llama_jni_stub.cpp
app/src/main/cpp/llama/build-android/arm64/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  license.cpp  llama-config.cmake
app/src/main/cpp/llama/build-android/arm64/common/: Makefile  build-info.cpp  cmake_install.cmake
app/src/main/cpp/llama/build-android/arm64/examples/: Makefile  cmake_install.cmake
app/src/main/cpp/llama/build-android/arm64/examples/batched/: Makefile  cmake_install.cmake
app/src/main/cpp/llama/build-android/arm64/examples/convert-llama2c-to-ggml/: Makefile  cmake_install.cmake
app/src/main/cpp/llama/build-android/arm64/examples/debug/: Makefile  cmake_install.cmake
app/src/main/cpp/llama/build-android/arm64/examples/diffusion/: Makefile  cmake_install.cmake
app/src/main/cpp/llama/build-android/arm64/examples/embedding/: Makefile  cmake_install.cmake
app/src/main/cpp/llama/build-android/arm64/examples/eval-callback/: Makefile  cmake_install.cmake
app/src/main/cpp/llama/build-android/arm64/examples/gen-docs/: Makefile  cmake_install.cmake
app/src/main/cpp/llama/build-android/arm64/examples/gguf/: Makefile  cmake_install.cmake
app/src/main/cpp/llama/build-android/arm64/examples/gguf-hash/: Makefile  cmake_install.cmake
app/src/main/cpp/llama/build-android/arm64/examples/idle/: Makefile  cmake_install.cmake
app/src/main/cpp/llama/build-android/arm64/examples/lookahead/: Makefile  cmake_install.cmake
app/src/main/cpp/llama/build-android/arm64/examples/lookup/: Makefile  cmake_install.cmake
app/src/main/cpp/llama/build-android/arm64/examples/parallel/: Makefile  cmake_install.cmake
app/src/main/cpp/llama/build-android/arm64/examples/passkey/: Makefile  cmake_install.cmake
app/src/main/cpp/llama/build-android/arm64/examples/retrieval/: Makefile  cmake_install.cmake
app/src/main/cpp/llama/build-android/arm64/examples/save-load-state/: Makefile  cmake_install.cmake
app/src/main/cpp/llama/build-android/arm64/examples/simple/: Makefile  (+1 more)
app/src/main/cpp/llama/build-android/arm64/ggml/: Makefile  cmake_install.cmake  ggml-config.cmake
app/src/main/cpp/llama/build-android/arm64/pocs/: Makefile  cmake_install.cmake
app/src/main/cpp/llama/build-android/arm64/src/: Makefile  cmake_install.cmake
app/src/main/cpp/llama/build-android/arm64/tools/: Makefile  cmake_install.cmake
(+60 files in other folders)
